# etch-loop

./: .gitignore  README.md  pyproject.toml
etch-loop/: BREAK.md  ETCH.md  RUN.md  SCAN.md
src/etch/: agent.py  analyze.py  cli.py  display.py  git.py  loop.py  prompt.py  report.py  signals.py
src/etch/templates/: BREAK.md  ETCH.md  RUN.md  SCAN.md
tests/: test_git.py  test_loop.py  test_prompt.py  test_signals.py
