[project]
name = "etch-loop"
version = "0.3.2"
requires-python = ">=3.11"
description = "Run Claude Code in a fix-break loop until your codebase is clean"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["typer", "rich"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
etch = "etch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etch"]
